fix non-bs4 glossary bug by removing inner span, add pointer to new glossary, deductions driver spacing fix, modal title fix

--- a/app/javascript/css/main.scss
+++ b/app/javascript/css/main.scss
@@ -520,7 +520,9 @@ a.disabled {
   pointer-events: none;
   cursor: not-allowed;
 }
+
 .glossary {
   color: var(--primary-color);
   border-bottom: 1px dashed var(--primary-color);
+  cursor: pointer;
 }
